tests/paczka2/big_fuzzy/34186486.err
Error in line 6: OvcajVI3p S845 85,5
Error in line 9: zNfPH S719 80,5
Error in line 11: OvcajVI3p S719 38,0
Error in line 30: AEDcpg7aJ S719 71,7
Error in line 33: oRSySNWV A9 308,6
Error in line 26: S719 A9 23,7
Error in line 44: S719 S142 72,0
Error in line 47: 6eTW S845 30,3
Error in line 51: 6eTW S719 -5,5
Error in line 53: OvcajVI3p A9 83,9
Error in line 59: AEDcpg7aJ S142 6,3
Error in line 61: oRSySNWV A9 80,69
Error in line 49: cFU S142 38,3
Error in line 52: oRSySNWV S142 55,3
Error in line 64: oRSySNWV A9 163,4
Error in line 37: zNfPH S845 280,1
Error in line 60: AEDcpg7aJ S719 91,2
Error in line 78: AEDcpg7aJ A9 32,7
Error in line 86: OvcajVI3p A9 23,0
Error in line 74: 6eTW S719 3,1
Error in line 107: OvcajVI3p S142 52,9
Error in line 104: cFU S719 14,2
Error in line 111: zNfPH S845 65,5
Error in line 124: AEDcpg7aJ S719 440,3
Error in line 122: OvcajVI3p S845 191,8
Error in line 125: AEDcpg7aJ S845 77,4
Error in line 137: AEDcpg7aJ S142 2,8
Error in line 141: AEDcpg7aJ S719 66,5
Error in line 140: cFU S142 22,5
Error in line 152: 6eTW S845 86,4
Error in line 155: oRSySNWV S845 14,2
Error in line 142: zNfPH A9 27,7
Error in line 160: oRSySNWV S142 43,9
Error in line 172: cFU S845 28,3
Error in line 176: cFU S142 85,9
Error in line 177: zNfPH S719 10,1
Error in line 181: oRSySNWV S719 297,4
Error in line 187: 6eTW S845 75,7
Error in line 185: zNfPH S845 91,7
Error in line 205: oRSySNWV S845 64,9
Error in line 209: oRSySNWV A9 9,8
Error in line 211: oRSySNWV S719 96,4
Error in line 222: oRSySNWV A9 45,7
Error in line 227: AEDcpg7aJ S142 179,0
Error in line 232: zNfPH S719 61,1
Error in line 233: zNfPH S845 41,8
Error in line 237: zNfPH S719 75,1
Error in line 229: AEDcpg7aJ A9 63,3
Error in line 238: zNfPH S142 45,3
Error in line 242: zNfPH A9 57,5
Error in line 243: OvcajVI3p S845 62,5
